--- a/marketing-digital/index.html
+++ b/marketing-digital/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marketinalg Digit</title>
+    <title>Java script</title>
 </head>
 <body>
     <main>
         <header>
-
-            <h1>Artigo 001</h1>
+            <article>
+                <h1>Curso de Javascript</h1>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum esse laborum veniam quaerat sapiente, libero maxime ex. Ea sunt odit voluptatem molestiae accusantium, minus, magni ducimus molestias doloremque deserunt quo!
-
             </p>
+            </article>
+            
+            
         </header>
     </main>
 </body>
